Fixes to README

--- a/resources/views/navbar.haml
+++ b/resources/views/navbar.haml
@@ -5,7 +5,7 @@
       .nav-collapse
         %ul.nav
           %li
-            %a(href="/") Last 50 queries
+            %a(href="/last_queries") Last queries
           %li
             %a(href="/top_queries") Top queries
           %li
